--- a/Home/01_HTML/Base/index1.html
+++ b/Home/01_HTML/Base/index1.html
@@ -42,10 +42,12 @@
     <p>Введите эти 4 строки:</p>
 
     <code>
-        #!/usr/bin/env python<br>
-        print 'Hello. I am a python program.'<br>
-        name = raw_input("What is your name?")<br>
-        print "Hello there, " + name + "!"
+        <span style="font-family: 'Courier New', Courier, monospace;">
+            #!/usr/bin/env python<br>
+            print 'Hello. I am a python program.'<br>
+            name = raw_input("What is your name?")<br>
+            print "Hello there, " + name + "!"
+        </span>
     </code>
 
     <p>Это всё. Сохраните файл как <strong>hello.py</strong> в любом месте. Я предлагаю сохранить его в папке<br>
@@ -58,11 +60,13 @@
     <p>в папке, в которой вы сохранили программу. Теперь запустите её.</p>
 
     <code>
-        greg@earth:~/python_examples$ ./hello.py<br>
-        Hello. I am a python program.<br>
-        What is your name? Ferd Burphel<br>
-        Hello there, Ferd Burphel!<br>
-        greg@earth:~/python_examples$'
+        <span style="font-family: 'Courier New', Courier, monospace;">
+            greg@earth:~/python_examples$ ./hello.py<br>
+            Hello. I am a python program.<br>
+            What is your name? Ferd Burphel<br>
+            Hello there, Ferd Burphel!<br>
+            greg@earth:~/python_examples$'
+        </span>
     </code>
 
     <p>Вот и всё</p>
@@ -76,9 +80,11 @@
 
     <code>
         <pre>
-        #!/usr/bin/env python
-        for cntr in range(0,10):
-            print cntr
+            <span style="font-family: 'Courier New', Courier, monospace;">   
+                #!/usr/bin/env python
+                for cntr in range(0,10):
+                    print cntr
+            </span>
         </pre>
     </code>
 
