--- a/Home/01_HTML/Base/index2.html
+++ b/Home/01_HTML/Base/index2.html
@@ -27,14 +27,14 @@
 
     <hr>
 
-    <p align="left">Впрошлом уроке мы рассмотрели простую программу, которая использовала raw_input <br>
+    <p>Впрошлом уроке мы рассмотрели простую программу, которая использовала raw_input <br>
         для получения ответа пользователя, простые типы переменных и простой цикл «<strong>for</strong>». В <br>
         этом уроке мы рассмотрим ещё больше типов переменных и напишем ещё больше <br>
         программ</p>
 
     <h2>Списки</h2>
 
-    <p align="left">Давайте рассмотрим другой тип переменных, который называется <em>списки</em>. В других <br>
+    <p>Давайте рассмотрим другой тип переменных, который называется <em>списки</em>. В других <br>
         языках программирования они называются <em>массивами</em>. Если мы обратимся к аналогии с <br>
         коробками для обуви, то массив (список) представляет собой несколько склеенных друг с <br>
         другом коробок с одинаковыми вещами. Например, в одной коробке лежат вилки, в <br>
@@ -46,7 +46,7 @@
         months = ['Jan','Feb','Mar','Apr','May','Jun','Jul','Aug','Sep','Oct','Nov','Dec']        
     </span></p>
 
-    <p align="left">Чтобы создать список, мы заключили все значения в квадратные скобки ( '<strong>[</strong>' и '<strong>]</strong>' ). Мы 
+    <p>Чтобы создать список, мы заключили все значения в квадратные скобки ( '<strong>[</strong>' и '<strong>]</strong>' ). Мы 
         назвали наш список 'months'. Чтобы использовать список, мы дадим команду print 
         <strong>months[0]</strong> или <strong>months[1]</strong> (которые выведут на экран '<em>Jan</em>' или '<em>Feb</em>'). Помните: счет 
         начинается с нуля. Чтобы найти длину списка, можно использовать такую функцию:
