--- a/Practice/links/sections/truck/sub_sections/Big-truck.html
+++ b/Practice/links/sections/truck/sub_sections/Big-truck.html
@@ -22,18 +22,18 @@
         </tr>
 
         <tr>
-            <th><a href="../../cars/sub_sections/New-cars.html">New-cars</a></th>
-            <th><a href="../../cars/sub_sections/Old-cars.html">Old-cars</a></th>
-            <th><a href="../../moto/sub_sections/Tuorist.html">Tourist</a></th>
-            <th><a href="../../moto/sub_sections/Enduro.html">Enduro</a></th>
-            <th><a href="../../moto/sub_sections/Chopper.html">Chopper</a></th>
-            <th><a href="../../moto/sub_sections/Sport.html">Sport</a></th>
-            <th><a href="../../ship/sub_sections/Boat.html">Boat</a></th>
-            <th><a href="../../ship/sub_sections/Yaht.html">Yaht</a></th>
-            <th><a href="Big-truck.html">Big-truck</a></th>
-            <th><a href="../sub_sections/Small-truck.html">Small-truck</a></th>
-            <th><a href="../../bus/sub_sections/School.html">School</a></th>
-            <th><a href="../../bus/sub_sections/Passenger.html">Passenger</a></th>
+            <td><a href="../../cars/sub_sections/New-cars.html">New-cars</a></td>
+            <td><a href="../../cars/sub_sections/Old-cars.html">Old-cars</a></td>
+            <td><a href="../../moto/sub_sections/Tuorist.html">Tourist</a></td>
+            <td><a href="../../moto/sub_sections/Enduro.html">Enduro</a></td>
+            <td><a href="../../moto/sub_sections/Chopper.html">Chopper</a></td>
+            <td><a href="../../moto/sub_sections/Sport.html">Sport</a></td>
+            <td><a href="Big-truck.html">Big-truck</a></td>
+            <td><a href="../sub_sections/Small-truck.html">Small-truck</a></td>
+            <td><a href="../../ship/sub_sections/Boat.html">Boat</a></td>
+            <td><a href="../../ship/sub_sections/Yaht.html">Yaht</a></td>
+            <td><a href="../../bus/sub_sections/School.html">School</a></td>
+            <td><a href="../../bus/sub_sections/Passenger.html">Passenger</a></td>
         </tr>
     </table>
 
