--- a/Home/02_HTML/Base/Index.html
+++ b/Home/02_HTML/Base/Index.html
@@ -6,31 +6,28 @@
     <title>Degrees Table</title>
 </head>
 <body>
-    <table border="1">
+    <table border="1" align="center">
         <caption><i>Прогноз погоды</i></caption>
             <tr>
-                <th ></th>
-                <th></th>
-                <th></th>
-                <th></th>
-                <th></th>
+                <th width="15%">Город</th>
+                <th width="15%">Утро</th>
+                <th width="15%">День</th>
+                <th width="15%">Вечер</th>
+                <th width="15%">Ночь</th>
             </tr>
             <tr>
-                <th ></th>
-                <th></th>
-                <th></th>
-                <th></th>
-                <th></th>
+                <th>Минск</th>
+                <td>-5&deg;</td>
+                <td>+5&deg;</td>
+                <td rowspan="2">+2&deg;</td>
+                <td>-10&deg;</td>
             </tr>
             <tr>
-                <th ></th>
-                <th></th>
-                <th></th>
-                <th></th>
-                <th></th>
+                <th>Брест</th>
+                <td>0&#176;</td>
+                <td>+9&#176;</td>
+                <td>-4&#176;</td>
             </tr>
-
-
     </table>
 </body>
 </html>
