--- a/Practice/Form/Zoo.html
+++ b/Practice/Form/Zoo.html
@@ -12,19 +12,19 @@
         <fieldset>
             <legend>Контактная информация</legend>
             <lable>
-                Имя <input type="text" name="Name" required maxlength="20"><br>
+                Имя<sup>*</sup> <input type="text" name="Name" required maxlength="20"><br>
             </lable>
             <lable>
                 Телефон <input type="tel" name="tel_number"><br>
             </lable>
             <lable>
-                Email <input type="email" required>
+                Email<sup>*</sup> <input type="email" required>
             </lable>
         </fieldset>
         <fieldset>
             <legend>Персональная информация</legend>
             <lable>
-                Возраст <input type="number" required min="16" max="60"><br>
+                Возраст<sup>*</sup> <input type="number" required min="16" max="60"><br>
             </lable>
             <lable>
                 Пол <select name="Пол"><br>
