CSS_03 and Practice

--- a/Practice/Block/index.html
+++ b/Practice/Block/index.html
@@ -24,10 +24,9 @@
         <div class="content">
             <div>block1</div>
             <div>block2</div>
-            <!-- <div>block3</div>
-            <div>block4</div> -->
         </div>
     </div>
+    <div class="clear"></div>
     <div class="footer">Footer</div>
 </body>
 </html>
