--- a/Home/CSS/02_CSS/Base/index3.html
+++ b/Home/CSS/02_CSS/Base/index3.html
@@ -20,22 +20,24 @@
     </div>
     <div class="article">
         <h3>Статья 1</h3>
-        <p>Размер блока: Занимает всю доступную ширину
-            Должен присутствовать цвет фона
-            Во всех статьях сделайте отступ снизу от соседей равным 2em 
+        <p>Размер блока: Занимает всю доступную ширину <br>
+            Должен присутствовать цвет фона <br>
+            Во всех статьях сделайте отступ снизу от соседей равным 2em <br>
             при помощи свойства margin-bottom
         </p>
     </div>
     <div class="article">
         <h3>Статья 2</h3>
-        <p>Размер блока: Занимает всю доступную ширину
-            Должен присутствовать цвет фона
-            Во всех статьях сделайте отступ снизу от соседей равным 2em 
-            при помощи свойства margin-bottom. 
-            Картинка вставлена при помощи тега, плавание организовано 
+        <p>Размер блока: Занимает всю доступную ширину <br>
+            Должен присутствовать цвет фона <br>
+            Во всех статьях сделайте отступ снизу от соседей равным 2em <br>
+            при помощи свойства margin-bottom.  <br>
+            Картинка вставлена при помощи тега, плавание организовано
             по правому краю внутри данной статьи для этой картинки.
-            <img src="/Home/05_HTML/Add/email.jpg" alt="eml">
+            <img src="../../../HTML/05_HTML/Add/email.jpg" alt="eml">
+            <div class="clear"></div>
         </p>
+
         
     </div>
     <div class="footer">Нижний блок, подвал. Занимает всю доступную ширину. Высота определяется помещенным внутрь контентом</div>
