--- a/Home/CSS/04_CSS/Base/index2.html
+++ b/Home/CSS/04_CSS/Base/index2.html
@@ -14,7 +14,7 @@
             <td>Должность</td>
             <td>Дата рож.</td>
             <td>Данные1</td>
-            <td>Даннык2</td>
+            <td class="last">Данные2</td>
         </tr>
         <tr>
             <td>Иванов Иван Иванович</td>
@@ -22,7 +22,7 @@
             <td>Начальник</td>
             <td>01.01.1960</td>
             <td>4567</td>
-            <td>3453</td>
+            <td class="last">3453</td>
         </tr>
         <tr>
             <td>Петрова Илона Петровна</td>
@@ -30,7 +30,7 @@
             <td>Секретарь</td>
             <td>01.01.1986</td>
             <td>98795</td>
-            <td>46523</td>
+            <td class="last">46523</td>
         </tr>
         <tr>
             <td>Силоров Илья Игоревич</td>
@@ -38,7 +38,7 @@
             <td>Бухгалтер</td>
             <td>01.01.1979</td>
             <td>743434</td>
-            <td>987979</td>
+            <td class="last">987979</td>
         </tr>
         <tr>
             <td>Пупин Фёдор Фёдорович</td>
@@ -46,7 +46,7 @@
             <td>Водитель</td>
             <td>01.01.1963</td>
             <td>74323434</td>
-            <td>3232379</td>
+            <td class="last">3232379</td>
         </tr>
         <tr>
             <td>Крупин Сергей Иванович</td>
@@ -54,15 +54,10 @@
             <td>Водитель2</td>
             <td>01.01.1983</td>
             <td>3234534</td>
-            <td>923123379</td>
+            <td class="last">923123379</td>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td class="bottom last" colspan="6">ДАННЫЕ О СОТРУДНИКАХ</td>
         </tr>
     </table>
 </body>
