--- a/Home/Jquery/index.html
+++ b/Home/Jquery/index.html
@@ -4,12 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="workers_table.css">
+
+    <style>
+        table{
+            border: 2px dotted gray;
+        }
+        caption{
+            caption-side: bottom;
+        }
+        td:not(.last){
+        border-right: 1px dotted gray;
+        }
+        td:not(.bottom){
+            border-bottom: 1px dotted gray;
+        }
+        tr:not(:nth-child(even)){
+            background-color: aquamarine;
+        }
+        tr:first-child{
+            text-align: center;
+            background-color: aqua;
+        }
+        tr:last-child{
+            background-color: white;
+        }
+        div>input{
+            padding: 5px;
+            color: #fff;
+            margin-top: 25px;
+            background-color: blue;
+            border-radius: 5px;
+        }
+        table tr:hover{
+            background-color: violet;
+        }
+    </style>
 </head>
 <body>
-    <table>
+    <table id="table-data">
         <caption>ДАННЫЕ О СОТРУДНИКАХ</caption>
-        <tr>
+        <tr id="string">
             <td>ФИО</td>
             <td>Пол</td>
             <td>Должность</td>
@@ -17,7 +51,7 @@
             <td>Данные1</td>
             <td class="last">Данные2</td>
         </tr>
-        <tr>
+        <tr id="string">
             <td>Иванов Иван Иванович</td>
             <td>М</td>
             <td>Начальник</td>
@@ -25,7 +59,7 @@
             <td>4567</td>
             <td class="last">3453</td>
         </tr>
-        <tr>
+        <tr id="string">
             <td>Петрова Илона Петровна</td>
             <td>Ж</td>
             <td>Секретарь</td>
@@ -33,7 +67,7 @@
             <td>98795</td>
             <td class="last">46523</td>
         </tr>
-        <tr>
+        <tr id="string">
             <td>Силоров Илья Игоревич</td>
             <td>М</td>
             <td>Бухгалтер</td>
@@ -41,7 +75,7 @@
             <td>743434</td>
             <td class="last">987979</td>
         </tr>
-        <tr>
+        <tr id="string">
             <td>Пупин Фёдор Фёдорович</td>
             <td>М</td>
             <td>Водитель</td>
@@ -49,7 +83,7 @@
             <td>74323434</td>
             <td class="last">3232379</td>
         </tr>
-        <tr>
+        <tr id="string">
             <td>Крупин Сергей Иванович</td>
             <td>М</td>
             <td>Водитель2</td>
@@ -58,5 +92,31 @@
             <td class="last">923123379</td>
         </tr>
     </table>
+
+    <div>
+        <input  type="button" value="Нет скрытых строк">
+    </div>
+
+
+
+    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+
+    <script>
+        $(document).ready(function($){
+            $('#table-data tr').click(function(){
+                $('#table-data tr:hover').hide();
+                $('input').val('Показать все строки');
+            });
+            $('div input').click(function(){
+                $('#table-data tr').show();
+                $('input').val('Нет скрытых строк')
+            })
+            
+        });
+
+    </script>
+
+
+
 </body>
 </html>
